--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/boubamg/DWJ-Projet6#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.10.0"
+    "mongoose": "^5.10.0",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
