--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/boubamg/DWJ-Projet6#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.0",
     "mongoose-unique-validator": "^2.0.3"
